force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__Credit_Score_TransUnion__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Credit_Score_TransUnion__c</fullName>
    <label>Credit Score (TransUnion)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>