force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__Current_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Current_Postal_Code__c</fullName>
    <label>Current Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>