force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__Current_State__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Current_State__c</fullName>
    <label>Current State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>