force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__CurrentContact__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__CurrentContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up the current</description>
    <label>Current Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Personal Credit Reports (Current Contact)</relationshipLabel>
    <relationshipName>Personal_Credit_Reports1</relationshipName>
    <type>Lookup</type>
</CustomField>