force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Date_of_Birth__c</fullName>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>