force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__Date_of_Credit_Report__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Date_of_Credit_Report__c</fullName>
    <description>Date the Personal credit report was completed</description>
    <inlineHelpText>Credit report run date</inlineHelpText>
    <label>Date of Credit Report</label>
    <type>Date</type>
</CustomField>