force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__Debt_to_high_credit__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Debt_to_high_credit__c</fullName>
    <label>Debt to High Credit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>