force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__DerogOtherCount__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__DerogOtherCount__c</fullName>
    <label>Derog Other Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>