force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__Detail_1__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Detail_1__c</fullName>
    <label>Detail 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>