force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__Detail_2__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Detail_2__c</fullName>
    <label>Detail 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>