force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__EducationPayment__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__EducationPayment__c</fullName>
    <label>Education Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>