force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__Experian_Alert_Message__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Experian_Alert_Message__c</fullName>
    <label>Experian Alert Message</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>