force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__Experian_Score_Factor__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Experian_Score_Factor__c</fullName>
    <label>Experian Score Factor</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>