force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__File_Number__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__File_Number__c</fullName>
    <label>File Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>