force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__Inquiry_Count__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Inquiry_Count__c</fullName>
    <label>Inquiry Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>