force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__Inquiry_number__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Inquiry_number__c</fullName>
    <displayFormat>MD-{DD}{MM}{YY}-{000}</displayFormat>
    <label>Inquiry Number</label>
    <type>AutoNumber</type>
</CustomField>