force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__InstallmentOtherBalance__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__InstallmentOtherBalance__c</fullName>
    <label>Installment Other Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>