force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__InstallmentPayment__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__InstallmentPayment__c</fullName>
    <label>Installment Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>