force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__Lead__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Personal Credit Reports</relationshipLabel>
    <relationshipName>Personal_Credit_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>