force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__LiabilityCurrentAdverseCount__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__LiabilityCurrentAdverseCount__c</fullName>
    <label>Liability Current Adverse Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>