force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__Name__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>