force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__NoDataAvailable__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__NoDataAvailable__c</fullName>
    <label>No Data Available</label>
    <summaryFilterItems>
        
            <field>LASERCA__Trade_Accounts__c.LASERCA__Status__c</field>
        
            <operation>equals</operation>
        
            <value>NoDataAvailable</value>
        
        </summaryFilterItems>
    <summaryForeignKey>LASERCA__Trade_Accounts__c.LASERCA__Personal_Credit_Report__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>