force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__NumberofTradeLines__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__NumberofTradeLines__c</fullName>
    <description>Total number of Trase lines for a credit report</description>
    <label>Number of Trade Lines</label>
    <summaryForeignKey>LASERCA__Trade_Accounts__c.LASERCA__Personal_Credit_Report__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>