force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__Oldest_Trade_Line__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Oldest_Trade_Line__c</fullName>
    <label>Oldest Trade Line</label>
    <length>32</length>
    <type>Text</type>
</CustomField>