force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__Openaccountswithabalance__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Openaccountswithabalance__c</fullName>
    <description>COunt of Open trade accounts with a balance</description>
    <label>Open accounts with a balance</label>
    <summaryFilterItems>
        
            <field>LASERCA__Trade_Accounts__c.LASERCA__Account_Status_Type__c</field>
        
            <operation>equals</operation>
        
            <value>Open</value>
        
        </summaryFilterItems>
    <summaryFilterItems>
        
            <field>LASERCA__Trade_Accounts__c.LASERCA__Account_Balance__c</field>
        
            <operation>greaterOrEqual</operation>
        
            <value>1.00</value>
        
        </summaryFilterItems>
    <summaryForeignKey>LASERCA__Trade_Accounts__c.LASERCA__Personal_Credit_Report__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>