force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__OpenAccountsZeroBalance__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__OpenAccountsZeroBalance__c</fullName>
    <description>Trade accounts open with a zero balance</description>
    <label>Open Accounts Zero Balance</label>
    <summaryFilterItems>
        
            <field>LASERCA__Trade_Accounts__c.LASERCA__Account_Status_Type__c</field>
        
            <operation>equals</operation>
        
            <value>Open</value>
        
        </summaryFilterItems>
    <summaryFilterItems>
        
            <field>LASERCA__Trade_Accounts__c.LASERCA__Account_Balance__c</field>
        
            <operation>equals</operation>
        
            <value>0</value>
        
        </summaryFilterItems>
    <summaryForeignKey>LASERCA__Trade_Accounts__c.LASERCA__Personal_Credit_Report__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>