force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__Public_Records__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Public_Records__c</fullName>
    <label>Public Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>