force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__Ranking__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Ranking__c</fullName>
    <label>Ranking</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>