force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__Real_Estate_Balance__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Real_Estate_Balance__c</fullName>
    <label>Real Estate Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>