force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__ReIssue__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__ReIssue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the credit report has been run prior with no changes to the name, address or social security number a copy of the prior report will be issued.</description>
    <label>Re-Issue</label>
    <type>Checkbox</type>
</CustomField>