force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__ResidencyType__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__ResidencyType__c</fullName>
    <label>Residency Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>