force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__RevolvingPercentageUsed__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__RevolvingPercentageUsed__c</fullName>
    <formula>LASERCA__Revolving_Balance__c  /  LASERCA__RevolvingHighCredit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revolving Percentage Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>