force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__Sum_of_monthly_Personal_Debt__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Sum_of_monthly_Personal_Debt__c</fullName>
    <label>Sum of Monthly Personal Debt</label>
    <summarizedField>LASERCA__Trade_Accounts__c.LASERCA__Monthly_Payment__c</summarizedField>
    <summaryForeignKey>LASERCA__Trade_Accounts__c.LASERCA__Personal_Credit_Report__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>