force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__Surcharge_per_report__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Surcharge_per_report__c</fullName>
    <defaultValue>0.75</defaultValue>
    <label>Surcharge per report</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>