force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__test__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__test__c</fullName>
    <label>Total Judgements</label>
    <summarizedField>LASERCA__Public_Records__c.LASERCA__Amount__c</summarizedField>
    <summaryForeignKey>LASERCA__Public_Records__c.LASERCA__Personal_Credit_Report__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>