force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__Total_High_Credit__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Total_High_Credit__c</fullName>
    <label>Total High Credit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>