force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__Total_Unsecured_Loan_Balance__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Total_Unsecured_Loan_Balance__c</fullName>
    <label>Total Unsecured Loan Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>