force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__TotalLiabilityCount__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__TotalLiabilityCount__c</fullName>
    <label>Total Liability Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>