force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__TotalLiabilityPayment__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__TotalLiabilityPayment__c</fullName>
    <label>Total Liability Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>