force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__TransUnion_Alert_Message__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__TransUnion_Alert_Message__c</fullName>
    <label>TransUnion Alert Message</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>