force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__TransUnion_Score_Factor__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__TransUnion_Score_Factor__c</fullName>
    <label>TransUnion Score Factor</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>