force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__UnknownPayment__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__UnknownPayment__c</fullName>
    <label>Unknown Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>