force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__Was_Delinquent_or_Derogatory__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Was_Delinquent_or_Derogatory__c</fullName>
    <label>Was Delinquent or Derogatory</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>