force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__X90_Day__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__X90_Day__c</fullName>
    <label>90-Day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>