force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/recordTypes/Community_Solar.recordType-meta.xml
<RecordType>
    <fullName>Community_Solar</fullName>
    <active>true</active>
    <description>Personal Credit Reports for Community Solar Customers</description>
    <label>Community Solar</label>
</RecordType>