force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/recordTypes/Solar_Loan.recordType-meta.xml
<RecordType>
    <fullName>Solar_Loan</fullName>
    <active>true</active>
    <description>Personal Credit Reports for Solar Loan Customers</description>
    <label>Solar Loan</label>
</RecordType>